--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Hello React Templates</h1>
-    <div id="container"></div>
     <div id="formContainer"></div>
+    <div id="twoNumericPanel"></div>
     <script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
 </body>
 </html>
