--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <h1>Hello React Templates</h1>
     <div id="formContainer"></div>
     <div id="twoNumericPanel"></div>
+    <div id="dynamicForm"></div>
     <script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
 </body>
 </html>
