--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <div id="formContainer"></div>
     <div id="twoNumericPanel"></div>
     <div id="dynamicForm"></div>
+    <div id="dependedCities"></div>
     <script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
 </body>
 </html>
