--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello React Templates</h1>
+    <div id="hello"></div>
     <div id="formContainer"></div>
     <div id="twoNumericPanel"></div>
     <div id="dynamicForm"></div>
