--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <div id="twoNumericPanel"></div>
     <div id="dynamicForm"></div>
     <div id="dependedCities"></div>
+    <div id="sliderPanel"></div>
     <script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
 </body>
 </html>
